# prefect-lakefs

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  codeql-config.yml.bkp
.github/workflows/: nightly-dev-tests.yml  release.yml  static_analysis.yml  template-sync.yml  tests.yml
branches/: index.html
commits/: index.html
credentials/: index.html
docs/: branches.md  commits.md  credentials.md  flows.md  gen_blocks_catalog.py  gen_examples_catalog.py  tasks.md
docs/stylesheets/: extra.css
examples/storage/: README.md  docker-compose.yml  example.py  requirements.txt
prefect_lakefs/: __init__.py  _version.py  blocks.py  branches.py  commits.py  credentials.py  flows.py  git.py  internal.py  objects.py  refs.py  storage.py  tasks.py
search/: search_index.json
tests/: conftest.py  test_block_standards.py  test_branches.py  test_commits.py  test_credentials.py  test_flows.py  test_internal.py  test_objects.py  test_refs.py  test_storage.py  test_tasks.py
