[tool.poetry]
name = "prefect-lakefs"
version = "0.1.0"
description = ""
authors = ["limx0"]
readme = "README.md"
packages = [{include = "prefect_lakefs"}]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.8"
lakefs-client = "^0.96"
prefect-aws = "^0.2.4"
gitpython = "^3.1.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
moto = "^4.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
